--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
     -DCORE_DEBUG_LEVEL=5
+    -D DEVICE_BLUETOOTH_NAME="\"Handy Stick\""
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
 
@@ -29,5 +30,8 @@ upload_speed = 1500000
 monitor_speed = 115200
 build_flags =
     -DCORE_DEBUG_LEVEL=5
+    -D DEVICE_BLUETOOTH_NAME="\"Handy Atom\""
+    -D USE_NEOPIXEL=1
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
+    adafruit/Adafruit NeoPixel@^1.15.1
