Updated build_src_filters to only build main-atom for atom-lite env

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ build_flags =
     -D DEVICE_BLUETOOTH_NAME="\"Handy Stick\""
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
+    M5GFX=https://github.com/m5stack/M5GFX
 
 [env:m5stack-atom]
 platform = espressif32@6.3.2
@@ -28,10 +29,13 @@ board = m5stack-atom
 framework = arduino
 upload_speed = 1500000
 monitor_speed = 115200
+build_src_filter = 
+  +<**/*.cpp>
+  +<main-atom.cpp>
+  -<main-stick.cpp>
 build_flags =
     -DCORE_DEBUG_LEVEL=5
     -D DEVICE_BLUETOOTH_NAME="\"Handy Atom\""
-    -D USE_NEOPIXEL=1
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
     adafruit/Adafruit NeoPixel@^1.15.1
