Updated build_src_filters for atom and stick

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,12 @@ board = m5stick-c
 framework = arduino
 upload_speed = 1500000
 monitor_speed = 115200
+build_src_filter = 
+  +<**/*.cpp>
+  +<main-stick.cpp>
+  -<main-atom.cpp>
+  -<led/neopixel.cpp>
+  -<led/neopixel.h>
 build_flags =
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
@@ -33,6 +39,8 @@ build_src_filter =
   +<**/*.cpp>
   +<main-atom.cpp>
   -<main-stick.cpp>
+  -<led/pixel.cpp>
+  -<led/pixel.h>
 build_flags =
     -DCORE_DEBUG_LEVEL=5
     -D DEVICE_BLUETOOTH_NAME="\"Handy Atom\""
