Updated connected talking text

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,7 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
     -DCORE_DEBUG_LEVEL=5
+    -D BAT_ADC_PIN=38
     -D DEVICE_BLUETOOTH_NAME="\"Handy Stick\""
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
@@ -44,6 +45,7 @@ build_src_filter =
 build_flags =
     -DCORE_DEBUG_LEVEL=5
     -D DEVICE_BLUETOOTH_NAME="\"Handy Atom\""
+    -D BATTERY_ADC_PIN=33
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
     adafruit/Adafruit NeoPixel@^1.15.1
