--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ build_src_filter =
   -<main-atom.cpp>
   -<led/neopixel.cpp>
   -<led/neopixel.h>
+board_build.partitions = min_spiffs.csv
 build_flags =
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
