Cleaned up comments

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,12 +41,13 @@ build_src_filter =
   +<**/*.cpp>
   +<main-atom.cpp>
   -<main-stick.cpp>
-  -<led/pixel.cpp>
-  -<led/pixel.h>
+  -<screen/*.cpp>
+
 build_flags =
     -DCORE_DEBUG_LEVEL=5
     -D DEVICE_BLUETOOTH_NAME="\"Handy Atom\""
-    -D BATTERY_ADC_PIN=33
+    -D BAT_ADC_PIN=33
 lib_deps =
     M5Unified=https://github.com/m5stack/M5Unified
     adafruit/Adafruit NeoPixel@^1.15.1
+board_build.partitions = huge_app.csv
